--- a/app.yaml
+++ b/app.yaml
@@ -1,4 +1,4 @@
-runtime: custom
+runtime: nodejs
 env: flex
 
 # This sample incurs costs to run on the App Engine flexible environment.
@@ -9,5 +9,5 @@ manual_scaling:
   instances: 1
 resources:
   cpu: 1
-  memory_gb: 0.5
+  memory_gb: 1
   disk_size_gb: 10
